# E-commerce

./: .env  db.sqlite3  pyproject.toml
cart/: admin.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
core/: settings.py  urls.py
orders/: forms.py  models.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
promotions/: models.py
reviews/: models.py
templates/: base.html
templates/cart/: cart_detail.html
templates/orders/: order_form.html
templates/products/: product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
templates/users/: user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py
